@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,22 +16,25 @@
 
 package org.springframework.security.web.util.matcher;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
-import javax.servlet.http.HttpServletRequest;
-
+import jakarta.servlet.http.HttpServletRequest;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import org.springframework.security.web.util.matcher.RequestMatcher.MatchResult;
+
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 import static org.assertj.core.api.Assertions.assertThatNullPointerException;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.springframework.security.web.servlet.util.matcher.PathPatternRequestMatcher.pathPattern;
 
 /**
  * @author Rob Winch
@@ -56,21 +59,9 @@ public class OrRequestMatcherTests {
 		assertThatNullPointerException().isThrownBy(() -> new OrRequestMatcher((RequestMatcher[]) null));
 	}
 
-	// gh-10703
 	@Test
 	public void constructorListOfDoesNotThrowNullPointer() {
-		// emulate List.of for pre-JDK 9 builds
-		List<RequestMatcher> requestMatchers = new ArrayList<RequestMatcher>(
-				Arrays.asList(AnyRequestMatcher.INSTANCE)) {
-			@Override
-			public boolean contains(Object o) {
-				if (o == null) {
-					throw new NullPointerException();
-				}
-				return super.contains(o);
-			}
-		};
-		new OrRequestMatcher(requestMatchers);
+		new OrRequestMatcher(List.of(pathPattern("/test")));
 	}
 
 	@Test
@@ -91,13 +82,13 @@ public class OrRequestMatcherTests {
 	@Test
 	public void constructorListContainsNull() {
 		assertThatIllegalArgumentException()
-				.isThrownBy(() -> new OrRequestMatcher(Arrays.asList((RequestMatcher) null)));
+			.isThrownBy(() -> new OrRequestMatcher(Arrays.asList((RequestMatcher) null)));
 	}
 
 	@Test
 	public void constructorEmptyList() {
 		assertThatIllegalArgumentException()
-				.isThrownBy(() -> new OrRequestMatcher(Collections.<RequestMatcher>emptyList()));
+			.isThrownBy(() -> new OrRequestMatcher(Collections.<RequestMatcher>emptyList()));
 	}
 
 	@Test
@@ -134,6 +125,28 @@ public class OrRequestMatcherTests {
 		given(this.delegate.matches(this.request)).willReturn(true);
 		this.matcher = new OrRequestMatcher(this.delegate, this.delegate2);
 		assertThat(this.matcher.matches(this.request)).isTrue();
+	}
+
+	@Test
+	public void matcherWhenMatchersHavePlaceholdersThenPropagatesFirstMatch() {
+		this.matcher = new OrRequestMatcher(this.delegate, this.delegate2);
+
+		given(this.delegate.matcher(this.request)).willReturn(MatchResult.match(Map.of("param", "value")));
+		given(this.delegate2.matcher(this.request)).willReturn(MatchResult.match(Map.of("param", "othervalue")));
+		MatchResult result = this.matcher.matcher(this.request);
+		assertThat(result.getVariables()).containsExactlyEntriesOf(Map.of("param", "value"));
+		verifyNoInteractions(this.delegate2);
+
+		given(this.delegate.matcher(this.request)).willReturn(MatchResult.match());
+		given(this.delegate2.matcher(this.request)).willReturn(MatchResult.match(Map.of("param", "value")));
+		result = this.matcher.matcher(this.request);
+		assertThat(result.getVariables()).isEmpty();
+		verifyNoInteractions(this.delegate2);
+
+		given(this.delegate.matcher(this.request)).willReturn(MatchResult.notMatch());
+		given(this.delegate2.matcher(this.request)).willReturn(MatchResult.match(Map.of("param", "value")));
+		result = this.matcher.matcher(this.request);
+		assertThat(result.getVariables()).containsExactlyEntriesOf(Map.of("param", "value"));
 	}
 
 }
